# l2-norm

./: L2.hs  L2Opt.hs  L2Slow.hs  LICENSE  Ln.hs  README.md  l2-norm.cabal  test.mat
GPU/: L.cu  L2.cu  L3.cu  s7.mat
GPU_bruteforce/: L.cu  L1_str_que_int_mtx.cu  L1_str_red_calc_int_mtx.cu  L1_str_red_int_mtx.cu  L2_str_que_int_mtx.cu  L2_str_red_calc_int_mtx.cu  L3_str_red_calc_int_mtx.cu  L3_str_red_int_mtx.cu  M20x20.txt  M36x36.txt  README  README.md
L2_eta_70/: W70i.txt  eta_70.m  output_L2.txt  output_eta.txt  readme.txt  runJob  runJob_matlab
