cabal-version:      2.4
name:               l2-norm
version:            0.1.0.0

synopsis: L2 matrix norm calculation
homepage:    https://github.com/divipp/l2-norm
bug-reports: https://github.com/divipp/l2-norm/issues

license:            BSD-3-Clause
license-file:       LICENSE
author:             Péter Diviánszky
maintainer:         divip@divip.hu

category:           Math
extra-source-files:
    README.md

executable L2
    main-is:          L2.hs
    build-depends:    base >=4.9
                    , vector
    default-language: Haskell2010

executable L2Opt
    main-is:          L2Opt.hs
    build-depends:    base >=4.9
                    , vector
    default-language: Haskell2010
