cabal-version:      2.4
name:               l2-norm
version:            0.2.0.0

synopsis: L_k matrix norm calculation
homepage:    https://github.com/divipp/l2-norm
bug-reports: https://github.com/divipp/l2-norm/issues

license:            BSD-3-Clause
license-file:       LICENSE
author:             Péter Diviánszky
maintainer:         divip@divip.hu

category:           Math
extra-source-files:
    README.md

executable Ln
    main-is:          Lk.hs
    ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N
    build-depends:    base >=4.9
                    , vector
                    , monad-par
                    , abstract-par
                    , optparse-applicative
    default-language: Haskell2010
